--- a/mywebsite/Dockerfile
+++ b/mywebsite/Dockerfile
@@ -3,7 +3,7 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
 RUN apk add --no-cache git && \
-    git clone https://github.com/dhruvmistry2000/dhruvmistry /tmp/repo && \
+    git clone --depth 1 https://github.com/dhruvmistry2000/dhruvmistry /tmp/repo && \
     cp -r /tmp/repo/* . && \
     rm -rf /tmp/repo
 
